fix browse panel scrollbar
git-svn-id: file:///home/awy/mirror/slim/trunk/server@12588 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Maestro/slimserver.css
+++ b/HTML/Maestro/slimserver.css
@@ -45,7 +45,8 @@ img { border: 0; }
 
 #browsedbList {
 	margin: 5px;
-	height: 400px;;
+	height: 400px;
+	overflow: auto;
 }
 
 
